[project]
name = "mepst"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Magaña López",email = "gustavo.maganalopez@uni.lu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bonesis (>=0.6.9,<0.7.0)"
]

[tool.poetry]
packages = [{include = "mepst", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
